--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "embla-carousel-react": "^8.0.2",
     "next": "14.1.4",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sharp": "^0.33.3"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
